--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@ canvas {
 }
 
 header {
-    border: 2px solid white;
+    border-bottom: 5px double rgba(255,255,255,.2);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -34,6 +34,8 @@ h1 {
 #infoBtn {
     background-color: #0000;
     border: none;
+    padding: 0;
+    height: 40px;
 }
 
 #info {
@@ -46,11 +48,21 @@ h1 {
     margin: 4vw;
     border: 2px solid red;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     grid-auto-rows: auto;
 }
 
 .example {
-    border: 2px solid blue;
+    min-height: 100px;
+    background-color: rgb(30, 30, 30);
+}
+.example:hover {
+    background-color: rgb(100, 100, 100);
+}
+
+@media only screen and (max-width: 600px) {
+    #exampleCont {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
